# deterministic-harness

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md
dhx/src/: bdd_gates.rs  config.rs  config_validate.rs  corpus.rs  docker.rs  docs_gates.rs  fsm.rs  fsm_render.rs  fsm_sync.rs  init.rs  main.rs  migrate.rs  tests.rs  tlc.rs  tools.rs  tools_heavy.rs
docs/: README.md  architecture.md  configuration.md  experiment-ab-10-projects.md  philosophy.md  toolchain.md  workflow.md
examples/: COMPARISON.md
examples/ledger/: COMPARISON.md
examples/ledger/service-with-harness/: CLAUDE.md  Cargo.toml  README.md  harness.toml  rust-toolchain.toml
examples/ledger/service-with-harness/.cargo/: config.toml
examples/ledger/service-with-harness/.claude/: settings.json
examples/ledger/service-with-harness/.harness/config/: mutants.toml
examples/ledger/service-with-harness/.harness/hooks/: commit-msg
examples/ledger/service-with-harness/crates/api/: Cargo.toml
examples/ledger/service-with-harness/crates/api/src/: http.rs  lib.rs  main.rs  state.rs
examples/ledger/service-with-harness/crates/api/tests/: dst.rs
examples/ledger/service-with-harness/crates/core/: Cargo.toml
examples/ledger/service-with-harness/crates/core/src/: lib.rs
examples/ledger/service-with-harness/crates/core/src/domain/: ledger.rs  lifecycle.rs  mod.rs  money.rs  parse.rs
examples/ledger/service-with-harness/crates/core/tests/: bdd.rs
examples/ledger/service-with-harness/fuzz/: Cargo.toml
examples/ledger/service-with-harness/fuzz/fuzz_targets/: parse_input.rs
examples/ledger/service-with-harness/spec/: traceability.lock.json
examples/ledger/service-with-harness/spec/adr/: ADR-0001-ports-for-determinism.md
examples/ledger/service-with-harness/spec/features/: concurrency.feature  conservation.feature  idempotency.feature  lifecycle.feature  parse.feature  query.feature  transfer.feature
examples/ledger/service-with-harness/spec/requirements/: REQ-001-parse-transfer-command.md  REQ-002-transfer-rules.md  REQ-003-conservation.md  REQ-004-idempotency.md  REQ-005-lifecycle.md  REQ-006-concurrency.md  REQ-007-queries.md
examples/ledger/service-with-harness/spec/tla/: Lifecycle.cfg  Lifecycle.tla  mutations.toml
examples/raft/: COMPARISON.md
examples/raft/service-with-harness/crates/sim/: Cargo.toml
examples/raft/service-with-harness/crates/sim/src/: checks.rs  lib.rs
examples/raft/service-with-harness/crates/sim/tests/: dst.rs
examples/raft/service-with-harness/fuzz/: Cargo.toml
examples/raft/service-with-harness/fuzz/fuzz_targets/: parse_resp.rs
examples/seats/: COMPARISON.md
examples/seats-off/: Cargo.toml
examples/seats-on/: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  harness.toml
examples/seats-on/.claude/skills/verify/: SKILL.md
examples/seats-on/.harness/config/: gitleaks.toml  mutants.toml
examples/seats-on/.harness/pins/: verus.txt
examples/seats-on/crates/core/: Cargo.toml
examples/seats-on/crates/core/proptest-regressions/domain/: parse.txt
examples/seats-on/crates/core/src/: lib.rs
examples/seats-on/crates/core/src/domain/: capacity.rs  hold.rs  mod.rs  parse.rs  state.rs
examples/seats-on/crates/core/src/ports/: mod.rs
examples/seats-on/spec/: traceability.lock.json
examples/seats-on/spec/adr/: ADR-0001-ports-for-determinism.md
examples/seats-on/spec/requirements/: REQ-001-lifecycle.md  REQ-002-capacity.md  REQ-003-hold-expiry.md  REQ-004-parse-booking.md
examples/seats-on/spec/tla/: Lifecycle.cfg  Lifecycle.tla  mutations.toml
examples/seats/service-no-harness/: Cargo.toml
examples/seats/service-no-harness/src/: main.rs  store.rs
examples/seats/service-with-harness/: CLAUDE.md  Cargo.toml  README.md  clippy.toml  harness.toml
examples/seats/service-with-harness/.harness/config/: deny.toml
examples/seats/service-with-harness/crates/api/: Cargo.toml
examples/seats/service-with-harness/crates/api/src/: adapters.rs  app.rs  http.rs  lib.rs  main.rs  service.rs  state.rs
examples/seats/service-with-harness/crates/api/tests/: dst.rs  http.rs
examples/seats/service-with-harness/crates/core/src/: lib.rs
examples/seats/service-with-harness/crates/core/src/domain/: example.rs  hold.rs  mod.rs  proofs.rs  properties.rs  reservation.rs  seats.rs
examples/seats/service-with-harness/crates/core/tests/: bdd.rs
examples/seats/service-with-harness/spec/: traceability.lock.json
examples/seats/service-with-harness/spec/adr/: ADR-0001-ports-for-determinism.md  ADR-0002-serialize-behind-mutex.md  ADR-0002-serialize-operations.md
examples/seats/service-with-harness/spec/features/: availability.feature  capacity.feature  concurrency.feature  confirm.feature  example.feature  expiry.feature  holds.feature  lifecycle.feature  release.feature  seats.feature
examples/seats/service-with-harness/spec/requirements/: REQ-001-hold.md  REQ-002-confirm.md  REQ-002-lifecycle.md  REQ-003-confirm.md  REQ-003-release.md  REQ-004-expiry.md  REQ-004-release.md  REQ-005-capacity.md  REQ-005-expiry.md  REQ-006-availability.md  REQ-007-concurrency.md
examples/seats/service-with-harness/spec/tla/: Lifecycle.cfg  Lifecycle.tla  mutations.toml
harness/: Cargo.toml
harness/assets/scaffold/: CLAUDE.md.template  README.md.tmpl  harness.toml.tmpl  rust-toolchain.toml
harness/assets/scaffold/crates/core/: Cargo.toml.tmpl
harness/assets/scaffold/crates/core/src/: lib.rs
harness/assets/scaffold/crates/core/src/domain/: example.rs  mod.rs  state.rs
harness/assets/scaffold/dot.claude/skills/check/: SKILL.md
harness/assets/scaffold/dot.claude/skills/verify/: SKILL.md
harness/assets/scaffold/dot.harness/hooks/: pre-commit
harness/assets/scaffold/dot.harness/pins/: nightly.txt
harness/assets/scaffold/spec/requirements/: REQ-001-example.md  REQ-001-lifecycle.md
harness/src/: bdd_gates.rs  bdd_style.rs  config.rs  config_explain.rs  config_validate.rs  docker.rs  fsm.rs  fsm_sync.rs  init.rs  main.rs  migrate.rs  proc.rs  tests.rs  tlc.rs  toolchain.rs  tools.rs  tools_heavy.rs  traceability.rs
(+63 files in other folders)
