[workspace]
resolver = "2"
members = ["crates/core"]

[workspace.package]
edition      = "2021"
rust-version = "1.83"
license      = "MIT OR Apache-2.0"

# Strict-but-reasonable lints. The determinism *bans* (SystemTime::now, thread_rng,
# …) live in clippy.toml as `disallowed_methods` — that is what makes the
# concurrency/DST gates meaningful (see CLAUDE.md "architecture precondition").
[workspace.lints.rust]
warnings               = "deny"
unsafe_op_in_unsafe_fn = "forbid"
missing_docs           = "warn"
# `kani` is set by `cargo kani` (the bounded model checker), not by cargo, so
# register it as a known cfg — otherwise `-D warnings` rejects the `#[cfg(kani)]`
# proof modules. Inert outside a Kani build.
unexpected_cfgs        = { level = "warn", check-cfg = ['cfg(kani)'] }

[workspace.lints.clippy]
all      = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
