[package]
name = "seats"
version = "0.1.0"
edition = "2021"

# Detach from the parent deterministic-harness workspace: this example builds
# standalone.
[workspace]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
