[workspace]
resolver = "2"
members = ["crates/core", "crates/api"]

[workspace.package]
edition      = "2021"
rust-version = "1.83"
license      = "MIT OR Apache-2.0"

# Strict-but-reasonable lints. The determinism *bans* (SystemTime::now, thread_rng,
# …) live in clippy.toml as `disallowed_methods` — that is what makes the
# concurrency/DST gates meaningful (see CLAUDE.md "architecture precondition").
[workspace.lints.rust]
warnings               = "deny"
unsafe_op_in_unsafe_fn = "forbid"
missing_docs           = "warn"
# `cfg(kani)` (proofs) and `cfg(loom)` (concurrency models) are set by those
# tools, not cargo — register them so plain `cargo clippy` doesn't warn
# `unexpected_cfgs` on the gated modules.
unexpected_cfgs        = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(loom)'] }

[workspace.lints.clippy]
all      = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
