[package]
name         = "api"
version      = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true

# The OUTER crate: this is where IO lives (HTTP via axum, the real wall clock).
# It depends on the IO-free `core` and wires production adapters behind the
# Clock/IdGen ports. The core never depends back on this crate.
# Aliased away from the literal name `core`: the domain crate is named `core`,
# which would shadow std's `core` and break the `#[tokio::main]`/`#[tokio::test]`
# macro expansions (they reference `::core::future::…`). The alias keeps std's
# `core` reachable for the macros.
[dependencies]
seats_core = { package = "core", path = "../core", version = "0.1" }
axum   = "0.8"
tokio  = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
serde  = { version = "1", features = ["derive"] }

[dev-dependencies]
tower  = { version = "0.5", features = ["util"] }
serde_json = "1"
http-body-util = "0.1"

[lints]
workspace = true
