[package]
name         = "api"
version      = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
# Not published — it's the service binary. Also stops cargo-deny's `bans` from
# flagging the in-workspace `core` path dependency as a wildcard.
publish = false

# The outer IO crate: axum HTTP, the real Clock/IdGen adapters, and the seeded
# DST harness. All non-determinism is wired here behind the core's ports; the
# core stays IO-free.
[dependencies]
core   = { path = "../core" }
axum   = "0.7"
tokio  = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
serde  = { version = "1", features = ["derive"] }

[dev-dependencies]
# DST uses a seeded PRNG to drive randomized operation sequences.

[[bin]]
name = "seats-server"
path = "src/main.rs"

# The deterministic simulation test — `cargo test -p api --test dst`.
# `harness = false`: it owns its own `fn main` so libtest doesn't run "0 tests"
# and skip the simulation vacuously.
[[test]]
name    = "dst"
harness = false

[lints]
workspace = true
