[package]
name         = "api"
version      = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
# Not a published library — it is the service binary + its IO adapters. Setting
# `publish = false` also stops cargo-deny's `wildcards` ban from flagging the
# in-workspace path dependency on `core`.
publish      = false

# The OUTER crate: all IO lives here (axum HTTP, real Clock/IdGen adapters),
# behind the core's ports. The verified core stays IO-free.
[dependencies]
core   = { path = "../core" }
axum   = "0.7"
tokio  = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
serde  = { version = "1", features = ["derive"] }

# The deterministic simulation test — `cargo test -p api --test dst`.
# `harness = false`: it owns its own `fn main` so the run actually executes
# (libtest's harness would report "0 tests" and the DST would never run).
[[test]]
name    = "dst"
harness = false

[lints]
workspace = true
